test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_address.sol
contract C layout at 0xdCad3a6d3569DF655070DEd06cb7A1b2Ccd1D3AF {}
// ----
// UnimplementedFeatureError 1834: (0-66): Code generation is not supported for contracts with specified storage layout base.
